--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
     text-align: center;
     background-color: $header-bg-color;
     // background-image: "/resources/cover.gif";
-    background-image: linear-gradient(40deg, #13395ab0, #1b7fbba1), url(/assets/header.gif);
+    background-image: linear-gradient(40deg, #13395ab0, #1b7fbba1), url(/resources/cover.gif);
     background-size: cover;
     background-position: center;
   
